Fix Java launching pattern
Signed-off-by: Jeff MAURY <jmaury@redhat.com>